--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -11,7 +11,7 @@ html, body {
 body {
     color: #ffffff;
     font-family: 'Inter', sans-serif;
-    background: url("{{ url_for('static', filename='background.png') }}") no-repeat center center fixed;
+    background: url("{{ url_for('static', filename='images/background.png') }}") no-repeat center center fixed;
     background-size: cover;
     position: relative;
 }
