Исправление маршрута в навигации

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
                 <div class="nav-links">
                     <a href="{{ url_for('main.index') }}" class="nav-link">Главная</a>
                     <a href="{{ url_for('main.about') }}" class="nav-link">О нас</a>
-                    <a href="{{ url_for('main.services') }}" class="nav-link">Услуги</a>
+                    <a href="{{ url_for('main.terms') }}" class="nav-link">Услуги</a>
                     <a href="{{ url_for('main.contact') }}" class="nav-link">Контакты</a>
                 </div>
                 <div class="nav-buttons">
