Исправление несуществующих маршрутов в футере

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,18 +47,18 @@
                         <h3 class="footer-links-title">Компания</h3>
                         <a href="{{ url_for('main.about') }}" class="footer-link">О нас</a>
                         <a href="{{ url_for('main.contact') }}" class="footer-link">Контакты</a>
-                        <a href="{{ url_for('main.careers') }}" class="footer-link">Карьера</a>
+                        <a href="{{ url_for('main.terms') }}" class="footer-link">Условия</a>
                     </div>
                     <div class="footer-links-column">
                         <h3 class="footer-links-title">Услуги</h3>
-                        <a href="{{ url_for('main.services') }}" class="footer-link">Все услуги</a>
-                        <a href="{{ url_for('main.investment') }}" class="footer-link">Инвестиции</a>
-                        <a href="{{ url_for('main.consulting') }}" class="footer-link">Консалтинг</a>
+                        <a href="{{ url_for('main.terms') }}" class="footer-link">Все услуги</a>
+                        <a href="{{ url_for('main.terms') }}" class="footer-link">Инвестиции</a>
+                        <a href="{{ url_for('main.terms') }}" class="footer-link">Консалтинг</a>
                     </div>
                     <div class="footer-links-column">
                         <h3 class="footer-links-title">Поддержка</h3>
-                        <a href="{{ url_for('main.faq') }}" class="footer-link">FAQ</a>
-                        <a href="{{ url_for('main.support') }}" class="footer-link">Поддержка</a>
+                        <a href="{{ url_for('main.terms') }}" class="footer-link">FAQ</a>
+                        <a href="{{ url_for('main.terms') }}" class="footer-link">Поддержка</a>
                         <a href="{{ url_for('main.terms') }}" class="footer-link">Условия использования</a>
                     </div>
                 </div>
